reports/tex: Fixes a limit of 80 characters per line (sort of)

--- a/haskell/relatorios/relatorio1/relatorio1.tex
+++ b/haskell/relatorios/relatorio1/relatorio1.tex
@@ -8,68 +8,118 @@
     \textbf{\textit{Relatório 1: Panorama Histórico} \\
     Caique Rodrigues Marques 13204303}
 \end{center}
-Este primeiro roteiro propõe ao aluno o conhecimento de alguns conceitos novos apresentados no conteúdo teórico das aulas sobre panorama histórico, sobre linguagens de programação e seus paradigmas.
+Este primeiro roteiro propõe ao aluno o conhecimento de alguns conceitos novos
+apresentados no conteúdo teórico das aulas sobre panorama histórico, sobre
+linguagens de programação e seus paradigmas.
 \subsection*{Questão 1}
-Pesquise sobre o termo "lógica combinatória" (ou \textit{combinatory logic} para info adicional) e tente compreender os combinadores \textbf{SKI}. Consegues diferenciar os combinadores de operadores?
+Pesquise sobre o termo "lógica combinatória" (ou \textit{combinatory logic}
+para info adicional) e tente compreender os combinadores \textbf{SKI}.
+Consegues diferenciar os combinadores de operadores?
         \begin{itemize}
-        \item Todas as operações em cálculo lambda são expressos em SKI numa árvore binária, cujas folhas são os símbolos S, K e I (chamados de combinadores).
+        \item Todas as operações em cálculo lambda são expressos em SKI numa
+            árvore binária, cujas folhas são os símbolos S, K e I (chamados de
+                combinadores).
         \end{itemize}
         
         \begin{itemize}
-        \item Combinador é uma função que segue algumas regras de caso geral, mas é comum combinador ser usado para referir a uma função que abstrai um pouco de funcionalidade comum que é a forma mais básica.
+        \item Combinador é uma função que segue algumas regras de caso geral,
+            mas é comum combinador ser usado para referir a uma função que
+                abstrai um pouco de funcionalidade comum que é a forma mais
+                básica.
         \end{itemize}
 
 \subsection*{Questão 2} 
-O que é a tese de Church-Turing? O que é a prova de computabilidade e como foi construída?
+O que é a tese de Church-Turing? O que é a prova de computabilidade e como foi
+construída?
         \begin{itemize}
-        \item A tese de Church-Turing foi formulada para o décimo dos 23 problemas propostos por David Hilbert em 1900 na conferência do Congresso Internacional de Matemáticos, o \textit{Entscheidungsproblem}. A solução proposta por Alonzo Church e Alan Turing, em 1930, mostravam a premissa de um algoritmo. \par
+        \item A tese de Church-Turing foi formulada para o décimo dos 23
+            problemas propostos por David Hilbert em 1900 na conferência do
+                Congresso Internacional de Matemáticos, o
+                \textit{Entscheidungsproblem}. A solução proposta por Alonzo
+                Church e Alan Turing, em 1930, mostravam a premissa de um
+                algoritmo. \par
 
-Ao definir como um algoritmo, uma sequência de passos finitos, as teses mostravam como algo pode ser computável ou por uma Máquina de Turing que a computasse ou por cálculo lambda.
+Ao definir como um algoritmo, uma sequência de passos finitos, as teses
+                mostravam como algo pode ser computável ou por uma Máquina de
+                Turing que a computasse ou por cálculo lambda.
         \end{itemize}
 
 \subsection*{Questão 3}
-Faça uma pesquisa sobre as linguagens de programação existentes e os seus paradigmas. \par
-        Existem vários paradigmas, seguem alguns:
+Faça uma pesquisa sobre as linguagens de programação existentes e os seus
+paradigmas. \par Existem vários paradigmas, seguem alguns:
         \begin{itemize}
-        \item \textit{\textbf{Paradigma lógico:}} baseado em lógica formal, cada sentença é construída a partir de fatos e regras de um problema. \\
+        \item \textit{\textbf{Paradigma lógico:}} baseado em lógica formal,
+            cada sentença é construída a partir de fatos e regras de um
+                problema. \\
         Exemplos: PROLOG e ASP.
         \end{itemize}
         
         \begin{itemize}
-        \item \textit{\textbf{Paradigma orientado a objeto:}} baseando-se no conceito de 'objetos'. Cada estrutura de dados montada corresponde a um objeto, que contém dados (aributos) e funções (métodos). \\
+        \item \textit{\textbf{Paradigma orientado a objeto:}} baseando-se no
+            conceito de 'objetos'. Cada estrutura de dados montada corresponde
+                a um objeto, que contém dados (aributos) e funções (métodos).
+                \\
         Exemplos: Java, C++ e Python.
         \end{itemize}
         
         \begin{itemize}
-        \item \textit{\textbf{Paradigma procedural:}} os programas são compostos por procedures, ou seja, métodos ou funções ou rotinas que definem uma sequência de passos computacionais a se seguir. \\
+        \item \textit{\textbf{Paradigma procedural:}} os programas são
+            compostos por procedures, ou seja, métodos ou funções ou rotinas
+                que definem uma sequência de passos computacionais a se seguir.
+                \\
         Exemplos: C, Fortran, GO e BASIC.
         \end{itemize}
 
 \subsection*{Questão 4}
-Lei de Moore, a palestra de Feynman, Peter Shor e a fatoração de números inteiros grandes.
+Lei de Moore, a palestra de Feynman, Peter Shor e a fatoração de números
+inteiros grandes.
         \begin{itemize}
-        \item Lei de Moore foi um conceito proposto por Gordon Moore, da Intel, que dizia que a capacidade de processamento dos computadores em geral dobraria a cada dezoito a vinte e quatro meses. Com o passar do tempo a sua ideia foi se realizando com o aumento de transistores e diminuição do tamanho dos chips, porém, se suspeitava se ela iria perpetuar. \par
+        \item Lei de Moore foi um conceito proposto por Gordon Moore, da Intel,
+            que dizia que a capacidade de processamento dos computadores em
+                geral dobraria a cada dezoito a vinte e quatro meses. Com o
+                passar do tempo a sua ideia foi se realizando com o aumento de
+                transistores e diminuição do tamanho dos chips, porém, se
+                suspeitava se ela iria perpetuar. \par
 
-A lei está ameaçada pela própria Intel que, recentemente, adiou o lançamento de processadores de 10nm e lançando a família Skylake 14nm no final de 2015 (os atuais são os da família Broadway, também de 14nm). Por outro lado, a IBM afirmou estar trabalhando na fabricação de processadores de 7nm.
+A lei está ameaçada pela própria Intel que, recentemente, adiou o lançamento de
+                processadores de 10nm e lançando a família Skylake 14nm no
+                final de 2015 (os atuais são os da família Broadway, também de
+                14nm). Por outro lado, a IBM afirmou estar trabalhando na
+                fabricação de processadores de 7nm.
         \end{itemize}
         
         \begin{itemize}
-        \item Em 1959, Richard Feynman palestrou sobre o controle da manipulação da metéria em escala atômica, segundo ele, não existe percalços a construção de elementos pequenos compostos por elementos ainda menores, no limite atômico, dando a ideia da possibilidade da nanotecnologia e computação quântica.
+        \item Em 1959, Richard Feynman palestrou sobre o controle da
+            manipulação da metéria em escala atômica, segundo ele, não existe
+                percalços a construção de elementos pequenos compostos por
+                elementos ainda menores, no limite atômico, dando a ideia da
+                possibilidade da nanotecnologia e computação quântica.
         \end{itemize}
         
         \begin{itemize}
-        \item Peter Shor foi responsável pelo algoritmo de Shor, um algoritmo que é capaz de fatorar inteiros exponencialmente mais rápido em um computador quântico do que em um computador clássico, o que levantou a questão da possibilidade de criptografia em computadores quânticos
+        \item Peter Shor foi responsável pelo algoritmo de Shor, um algoritmo
+            que é capaz de fatorar inteiros exponencialmente mais rápido em um
+                computador quântico do que em um computador clássico, o que
+                levantou a questão da possibilidade de criptografia em
+                computadores quânticos
         \end{itemize}
         
 \subsection*{Questão 5}
 O que é um qubit?
         \begin{itemize}
-        \item Um Qubit é um bit quântico, ele pode ter três estados, zero, um e um intermediário, que é um e zero ao mesmo tempo.
+        \item Um Qubit é um bit quântico, ele pode ter três estados, zero, um e
+            um intermediário, que é um e zero ao mesmo tempo.
         \end{itemize}
 
 \subsection*{Questão 6}
 D-WAVE?
         \begin{itemize}
-        \item D-Wave Systems é uma empresa canadense que foca em computação quântica. Em 11 de maio de 2011 a empresa lançou o D-Wave One, descrito como "o primeiro computador quântico comercial", a máquina opera em chips de 128 qubits. O D-Wave One não é um computador de propósito geral (uso pessoal), mas sim para resolução de problemas e otimização, principalmente. Um sucessor, D-Wave Two já foi anunciado. 
+        \item D-Wave Systems é uma empresa canadense que foca em computação
+            quântica. Em 11 de maio de 2011 a empresa lançou o D-Wave One,
+                descrito como "o primeiro computador quântico comercial", a
+                máquina opera em chips de 128 qubits. O D-Wave One não é um
+                computador de propósito geral (uso pessoal), mas sim para
+                resolução de problemas e otimização, principalmente. Um
+                sucessor, D-Wave Two já foi anunciado. 
         \end{itemize}
 \end{document}
