--- a/haskell/relatorios/relatorio3/relatorio3.tex
+++ b/haskell/relatorios/relatorio3/relatorio3.tex
@@ -13,18 +13,36 @@
     Caique Rodrigues Marques 13204303}
 \end{center}
 
-A linguagem Python é uma linguagem interpretada, mas com algumas características bem interessantes. Primeiro, porque tem interface com muitas linguagens como C e Haskell e, em segundo lugar, porque suporta o paradigma procedimental e o paradigma procedural.
+A linguagem Python é uma linguagem interpretada, mas com algumas
+características bem interessantes. Primeiro, porque tem interface com muitas
+linguagens como C e Haskell e, em segundo lugar, porque suporta o paradigma
+procedimental e o paradigma procedural.
 
-Neste relatório há a apresentação de três programas escritos na linguagem Python: bitcoin.py que possui os paradigmas funcional e procedural, apod.py que possui o paradigma procedural e eratosthenes.py que possui o paradigma funcional.
+Neste relatório há a apresentação de três programas escritos na linguagem
+Python: bitcoin.py que possui os paradigmas funcional e procedural, apod.py que
+possui o paradigma procedural e eratosthenes.py que possui o paradigma
+funcional.
 
 \section*{bitcoin.py}
-O programa bitcoin.py foi descrito apenas para fornecer o preço de um Bitcoin nas mais variadas moedas disponíveis pelo mundo. A Bitcoin Price Index API, que foi usada para fornecer os valores, é provinda pelo \href{http://www.coindesk.com/api/}{CoinDesk}. Mais informações podem ser encontradas no link.
+O programa bitcoin.py foi descrito apenas para fornecer o preço de um Bitcoin
+nas mais variadas moedas disponíveis pelo mundo. A Bitcoin Price Index API, que
+foi usada para fornecer os valores, é provinda pelo
+\href{http://www.coindesk.com/api/}{CoinDesk}. Mais informações podem ser
+encontradas no link.
 
-Rapidamente apresentando, o Bitcoin é uma criptomoeda baseada na rede \textit{peer-to-peer} (P2P) sem interferência de terceiros ou governos, é totalmente open-source, assim sendo, seu valor em dinheiro é instável e sempre varia. Isto é o que define o paradigma procedural do programa, pois, a cada momento em que ele for executado, sempre retornará um valor diferente, independete da moeda escolhida.
+Rapidamente apresentando, o Bitcoin é uma criptomoeda baseada na rede
+\textit{peer-to-peer} (P2P) sem interferência de terceiros ou governos, é
+totalmente open-source, assim sendo, seu valor em dinheiro é instável e sempre
+varia. Isto é o que define o paradigma procedural do programa, pois, a cada
+momento em que ele for executado, sempre retornará um valor diferente,
+independete da moeda escolhida.
 
-Há três funções que definem o programa: help(), get\_country() e default(), além do main, onde acontece a execução do programa:
+Há três funções que definem o programa: help(), get\_country() e default(),
+além do main, onde acontece a execução do programa:
 \begin{itemize}
-    \item A função default() apenas retorna o preço de um Bitcoin nas três moedas definidas na API padrão do Bitcoin Price Index: o Dólar estadunidense, a Libra inglesa e o Euro.
+    \item A função default() apenas retorna o preço de um Bitcoin nas três
+        moedas definidas na API padrão do Bitcoin Price Index: o Dólar
+        estadunidense, a Libra inglesa e o Euro.
 \begin{verbatim}caique@marvin:~$ python3 bitcoin.py 
 Bitcoin price in Sep 13, 2015 20:08:00 UTC
 [USD] $229.3037 - United States Dollar
@@ -32,7 +50,9 @@ Bitcoin price in Sep 13, 2015 20:08:00 UTC
 [EUR] €202.2431 - Euro
 \end{verbatim}
     
-    \item A função get\_country() retorna o preço do Bitcoin em outras moedas definidas como argumento na compilação do programa, incluindo as três usadas no padrão default.
+    \item A função get\_country() retorna o preço do Bitcoin em outras moedas
+        definidas como argumento na compilação do programa, incluindo as três
+        usadas no padrão default.
 \begin{verbatim}caique@marvin:~$ python3 bitcoin.py brl jpy cny
 Bitcoin price in Sep 13, 2015 20:22:00 UTC
 [BRL] $888.6172 - Brazilian Real
@@ -40,7 +60,11 @@ Bitcoin price in Sep 13, 2015 20:22:00 UTC
 [CNY] $1,473.3050 - Chinese Yuan
     \end{verbatim}
     
-    \item A função help() retorna a lista de moedas disponíveis onde o preço de um Bitcoin pode ser visto. Esta função é o que define o paradigma funcional do programa, pois, usando o argumento "help" na compilação do programa, ela retornará a lista com as moedas e os respectivos países que a adotam.
+    \item A função help() retorna a lista de moedas disponíveis onde o preço de
+        um Bitcoin pode ser visto. Esta função é o que define o paradigma
+        funcional do programa, pois, usando o argumento "help" na compilação do
+        programa, ela retornará a lista com as moedas e os respectivos países
+        que a adotam.
 \begin{verbatim}caique@marvin:~$ python3 bitcoin.py help
 AED - United Arab Emirates Dirham
 AFN - Afghan Afghani
@@ -55,10 +79,18 @@ AUD - Australian Dollar
 
 \newpage
 \section*{apod.py}
-O programa apod.py é baseado na iniciativa \href{http://apod.nasa.gov/apod/astropix.html}{Astronomy Picture of the Day} da NASA, onde cada dia é mostrada uma imagem retirada por um astrônomo e ele a descreve. A API usada para o programa pode ser encontrada no \href{https://data.nasa.gov/developer}{Portal de Dados da NASA}.
+O programa apod.py é baseado na iniciativa
+\href{http://apod.nasa.gov/apod/astropix.html}{Astronomy Picture of the Day} da
+NASA, onde cada dia é mostrada uma imagem retirada por um astrônomo e ele a
+descreve. A API usada para o programa pode ser encontrada no
+\href{https://data.nasa.gov/developer}{Portal de Dados da NASA}.
 
 \sloppy
-O programa tem a mesma funcionalidade da ferramenta provinda pela agência espacial, mostrar uma imagem de astronomia a cada dia. Isto faz com que o programa seja totalmente procedural, pois, a cada entrada num dia, pode retornar uma resposta diferente e, inclusive, o algoritmo foi montado de forma em que ele siga uma sequência de passos (procedures), sem o uso de funções.
+O programa tem a mesma funcionalidade da ferramenta provinda pela agência
+espacial, mostrar uma imagem de astronomia a cada dia. Isto faz com que o
+programa seja totalmente procedural, pois, a cada entrada num dia, pode
+retornar uma resposta diferente e, inclusive, o algoritmo foi montado de forma
+em que ele siga uma sequência de passos (procedures), sem o uso de funções.
 
 \begin{verbatim}
 caique@marvin:~$ python3 apod.py 
@@ -77,9 +109,15 @@ Texas, today's eclipse can only be seen from southern Africa and Antarctica.
 \end{verbatim}
 
 \section*{eratosthenes.py}
-O programa é um algoritmo simples para achar todos os primos até um dado número máximo. Para determinar se um número é primo, divide-o por todos os números a partir de dois até a sua raiz quadrada, se esse número não for divisível por todos os números do intervalo, ele é primo.
+O programa é um algoritmo simples para achar todos os primos até um dado número
+máximo. Para determinar se um número é primo, divide-o por todos os números a
+partir de dois até a sua raiz quadrada, se esse número não for divisível por
+todos os números do intervalo, ele é primo.
 
-Esta técnica é chamada de Crivo de Eratóstenes e foi criada pelo matemático grego Eratóstenes de Cirene, que viveu entre 285-194 a.C.. O programa possui o paradigma funcional porque, sempre que um número máximo qualquer for especificado, ele sempre vai retornar a mesma sequência referente ao número.
+Esta técnica é chamada de Crivo de Eratóstenes e foi criada pelo matemático
+grego Eratóstenes de Cirene, que viveu entre 285-194 a.C.. O programa possui o
+paradigma funcional porque, sempre que um número máximo qualquer for
+especificado, ele sempre vai retornar a mesma sequência referente ao número.
 \sloppy
 \begin{verbatim}caique@marvin:~$ python3 eratosthenes.py 1000
 
