--- a/haskell/relatorios/relatorio7/relatorio7.tex
+++ b/haskell/relatorios/relatorio7/relatorio7.tex
@@ -1,7 +1,9 @@
 \documentclass{article}
 \usepackage[utf8]{inputenc}
-\usepackage{amsfonts} % Uso de fontes para conjuntos como R (reais), Z (inteiros), etc.
-\usepackage[a4paper, left=20mm, right=20mm, top=20mm, bottom=20mm]{geometry} % Formatação da página
+\usepackage{amsfonts}
+% Uso de fontes para conjuntos como R (reais), Z (inteiros), etc.
+\usepackage[a4paper, left=20mm, right=20mm, top=20mm, bottom=20mm]{geometry}
+% Formatação da página
 
 \begin{document}
     \begin{center}
@@ -10,7 +12,11 @@
         Caique Rodrigues Marques 13204303}
     \end{center}
 
-O módulo \textit{hyperbolic\_functions.hs} implementado na linguagem de programação Haskell realiza os cálculos das seguintes operações de funções hiperbólicas, sendo $e$ a constante matemática que pode ser calculada pela seguinte série de Taylor $\sum_{n=1}^{\infty}\frac{1}{n!} = \frac{1}{1} + \frac{1}{1.2} + \frac{1}{1.2.3} +...$. \\ \\
+O módulo \textit{hyperbolic\_functions.hs} implementado na linguagem de
+programação Haskell realiza os cálculos das seguintes operações de funções
+hiperbólicas, sendo $e$ a constante matemática que pode ser calculada pela
+seguinte série de Taylor $\sum_{n=1}^{\infty}\frac{1}{n!} = \frac{1}{1} +
+\frac{1}{1.2} + \frac{1}{1.2.3} +...$. \\ \\
 
 \noindent
 $Senh(x) = \frac{e^{x} - e^{-x}}{2}$ \\ \\
@@ -18,7 +24,10 @@ $Cosh(x) = \frac{e^{x} + e^{-x}}{2}$ \\ \\
 $Tanh(x) = \frac{Senh(x)}{Cosh(x)}$ \\ \\
 $Coth(x) = \frac{Cosh(x)}{Senh(x)}$ \\ \\
     
-No módulo, a determinação da constante $e$ foi estabelecida como $n = 1000$, ou seja, é calculado o somatório da sequência de $1$ até $\frac{1}{1000!}$, devido a esta limitação, a aproximação dos valores tende a ser menor em comparação às implementações nativas do Haskell, que tem até seis casas de aproximação.
+No módulo, a determinação da constante $e$ foi estabelecida como $n = 1000$, ou
+seja, é calculado o somatório da sequência de $1$ até $\frac{1}{1000!}$, devido
+a esta limitação, a aproximação dos valores tende a ser menor em comparação às
+implementações nativas do Haskell, que tem até seis casas de aproximação.
 
 \begin{verbatim}
     *HyperbolicFunctions> sinh 1
@@ -27,6 +36,7 @@ No módulo, a determinação da constante $e$ foi estabelecida como $n = 1000$, 
     1.1752012
 \end{verbatim}
 
-As outras funções possíveis de usar são \textit{value(Cosh x)}, \textit{value(Tanh x)} e \textit{value(Coth x)} com $x \in \mathbb{R}$.
+As outras funções possíveis de usar são \textit{value(Cosh x)},
+\textit{value(Tanh x)} e \textit{value(Coth x)} com $x \in \mathbb{R}$.
 
 \end{document}
